--- a/Finnish/main/MiGalleryLockscreen.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiGalleryLockscreen.apk/res/values-fi-rFI/strings.xml
@@ -56,6 +56,7 @@
   <string name="cat_16">Tytöt</string>
   <string name="cat_17">Elokuvat</string>
   <string name="cat_18">Eläimet</string>
+  <string name="cat_19">Anime</string>
   <string name="cat_2">Kuvitus</string>
   <string name="cat_3">Sisustus</string>
   <string name="cat_4">Urheilu</string>
