--- a/Finnish/main/BugReport.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/BugReport.apk/res/values-fi-rFI/strings.xml
@@ -229,7 +229,6 @@
   <string name="michat_pull_to_refresh_pull_label">Vedä alas nähdäksesi historia</string>
   <string name="michat_pull_to_refresh_refreshing_label">Ladataan historiaa…</string>
   <string name="michat_pull_to_refresh_release_label">Vapauta nähdäksesi historia</string>
-  <string name="michat_queue_pos_update">%1$d henkilöä on jonossa ennen sinua, odota hetki…</string>
   <string name="michat_return_to_outside">Poistu</string>
   <string name="michat_service_unavailiable">Infoa ei saatu, yritä myöhemmin uudestaan</string>
   <string name="michat_skillset_business_type_title">Valitse palvelu</string>
@@ -318,7 +317,7 @@
   <string name="select_system_app_tag">Valitse ongelma</string>
   <string name="submit_dialog_cancel">En hyväksy</string>
   <string name="submit_dialog_confirm">Hyväksyn</string>
-  <string name="submit_dialog_content">Palautteesi, liitetiedostot ja lokitiedostot lähetetään MIUI:n palvelimille. Se saattaa sisältää henkilökohtaisia tietoja. Valitsemalla \"Hyväksyn"\ tarkoittaa, että olet lukenut ja hyväksyt meidän Tietosuojakäytännön ja Käyttöehdot.</string>
+  <string name="submit_dialog_content">Sinun täytyy hyväksyä meidän Tietosuojakäytäntömme ja Käyttöehdot käyttääksesi Palautetta. Ilmoittamasi ongelma lähetetään MIUI:n palvelimille mukaan lukien liittämäsi kohteet (saattaa sisältää henkilötietoja mukaan lukien laitteesi ja verkkosi tiedot). Tämä auttaa meitä paikallistamaan ja ratkaisemaan ilmoittamasi ongelman.</string>
   <string name="submit_dialog_content_global">Palautteesi, sisältäen liitetiedot (jos liitetty) ja virhelokit (voit poistaa valinnat niistä valintalaatikoista joita et tahdo lähettää) lähetetään MIUI:n palvelimille ja rajoitetulle MIUI:n keskustelupalstan kehittäjille. Palstojesi ja keskustelupalstan aktiviteettitietosi myös kerätään analysoitavaksi ja tuleviin yhteydenottoihin. Lokitiedot saattaa sisältää henkilokohtaisia tietoja ja sijaintitietosi. Valitsemalla \"Hyväksyn"\ tarkoittaa, että olet lukenut ja hyväksyt meidän Tietosuojakäytännön ja Käyttöehdot.</string>
   <string name="submit_dialog_title">Lähetä raportti</string>
   <string name="submit_feedback_info_failed">Raporttia ei voitu lähettää</string>
