--- a/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/strings.xml
@@ -1191,7 +1191,7 @@ Operaattori saattaa veloittaa sinua lisämaksuista, jos käytät mobiilidataa uu
   <string name="main_button_mi_sim_close">Aktivoi Mi SIM</string>
   <string name="main_button_mi_sim_open">Näytä tiedot</string>
   <string name="main_button_usage_adjust">Synkronoi mobiilidatan käyttö</string>
-  <string name="main_button_usage_adjust_manual">Aseta tiedonsiirtoraja</string>
+  <string name="main_button_usage_adjust_manual">Aseta datan käyttö</string>
   <string name="main_button_usage_adjusting">Vaihdetaan…</string>
   <string name="main_button_usage_adjusting_bill">Vaihdetaan…</string>
   <string name="main_button_usage_package_setting">Aseta tiedonsiirtoraja</string>
@@ -1691,10 +1691,8 @@ Kokeile käyttää toista ethernet-kaapelia reitittimesi yhdistämiseen. Jos luu
   <string name="pref_about_traffic_title">Datan käytön asetukset</string>
   <string name="pref_adjust_data_usage">Operaattorin viestimalli</string>
   <string name="pref_adjust_data_usage_summary">Kalibrointimallin vaihtamisen jälkeen, MIUI käyttää sitä hankkiakseen datan käytön tiedot operaattoriltasi</string>
-  <string name="pref_adjust_data_usage_value">Vaihdettu</string>
   <string name="pref_adjust_traffic_data">Aseta datan käyttö</string>
   <string name="pref_allow_connect_network_title">Ulkomaan data-roaming</string>
-  <string name="pref_auto_adjust_settings">Säädä datan käyttötilaston asetukset automaattisesti</string>
   <string name="pref_auto_adjust_traffic">Säädä datan käyttötilastot automaattisesti</string>
   <string name="pref_automatic_adjust">Synkronoi operaattorin datan käyttö</string>
   <string name="pref_avaible_traffic">Datapaketti</string>
@@ -1706,7 +1704,6 @@ Kokeile käyttää toista ethernet-kaapelia reitittimesi yhdistämiseen. Jos luu
   <string name="pref_category_title_module_settings">Ominaisuuksien asetukset</string>
   <string name="pref_category_title_other">Lisäasetukset</string>
   <string name="pref_category_title_securitycenter_settings">Yleiset asetukset</string>
-  <string name="pref_confirm_operator_setting">Varmista, että syöttämäsi tiedot on oikein</string>
   <string name="pref_correction_setting">Kalibrointimallin asetukset</string>
   <string name="pref_correction_setting_switch">Käytä omaa kalibrointimallia</string>
   <string name="pref_correction_sms_content">Kalibrointimalli</string>
