--- a/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
@@ -428,12 +428,12 @@ Aseta vain laitteet vierekkäin (yleensä takakannet vastakkain) ja kosketa näy
   <string name="application_item_disable">Kiellä</string>
   <string name="application_item_permission">Salli</string>
   <string name="application_lock_name">Sovelluslukko</string>
-  <string name="application_manager_section_title">Sovellusasetukset</string>
+  <string name="application_manager_section_title">Sovellukset</string>
   <string name="application_permission_manager">Sovelluksen käyttöoikeudet</string>
   <string name="application_permissions">Sovelluksen käyttöoikeudet</string>
   <string name="application_restrictions">Sovellusten ja sisällön salliminen</string>
   <string name="application_size_label">Sovelluksen koko</string>
-  <string name="applications_settings">Asennetut sovellukset</string>
+  <string name="applications_settings">Hallinnoi sovelluksia</string>
   <string name="applications_settings_header">Sovellusasetukset</string>
   <string name="applications_settings_summary">Hallinnoi sovelluksia, ota käyttöön pikakuvakkeita</string>
   <string name="apply_fingerprint_to_category_title">Käytä sormenjälkeä…</string>
@@ -1504,6 +1504,8 @@ Asetus vaikuttaa tämän puhelimen kaikkiin käyttäjiin."</string>
   <string name="default_for_work">Työkäytön oletus</string>
   <string name="default_input_method">Valitse oletusnäppäimistö</string>
   <string name="default_keyboard_layout">Oletus</string>
+  <string name="default_launcher_set_jeejen_message">Paina Kotipainiketta määrittääksesi Jeejen</string>
+  <string name="default_launcher_set_system_message">Paina Kotipainiketta palauttaaksesi oletuskäynnistimen</string>
   <string name="default_launcher_title">Oletuskäynnistin</string>
   <string name="default_map_app_title">Karttasovellus</string>
   <string name="default_notification_assistant">Ilmoitusapuri</string>
@@ -1560,6 +1562,12 @@ Asetus vaikuttaa tämän puhelimen kaikkiin käyttäjiin."</string>
   <string name="device_cpu4_info">Quad-core</string>
   <string name="device_cpu6_info">Hexa-core</string>
   <string name="device_cpu8_info">Octa-core</string>
+  <string name="device_description_battery">Akun kapasiteetti</string>
+  <string name="device_description_camera">Takakamera</string>
+  <string name="device_description_cpu">CPU</string>
+  <string name="device_description_ram">RAM</string>
+  <string name="device_description_resolution">Resoluutio</string>
+  <string name="device_description_screen">Näytön koko</string>
   <string name="device_display_layout_title">Ominaisuudet</string>
   <string name="device_edit_title">Nimeä laite uudelleen</string>
   <string name="device_feedback">Lähetä palautetta tästä laitteesta</string>
@@ -1744,6 +1752,10 @@ Asetus vaikuttaa tämän puhelimen kaikkiin käyttäjiin."</string>
   <string name="dtmf_tone_enable_title">Valintanäppäimien näppäinäänet</string>
   <string name="dual_setting_simcard1">SIM-kortti 1</string>
   <string name="dual_setting_simcard2">SIM-kortti 2</string>
+  <string name="dump_log">Hae ongelmaan liittyvät lokit</string>
+  <string name="dump_log_summary">"Tämä toiminto on luotu luomaan 284 lokin MIUI:n Alpha- ja Beta-versioissa. Käytä sitä varoen.
+Voit katsoa luotuja lokeja Tiedostohallinnassa."</string>
+  <string name="dump_log_title">Tietoja tästä toiminnosta</string>
   <string name="edge_mode_back">Palaa takaisin</string>
   <string name="edge_mode_back_summary">Palataksesi takaisin, tuplanapauta puhelimen reunaa</string>
   <string name="edge_mode_clean">Tyhjennä järjestelmän välimuisti</string>
@@ -2865,6 +2877,8 @@ Tällä laitteella on muita paikalla olevia käyttäjiä.
   <string name="miui_allow_vibrate">Värinät</string>
   <string name="miui_data_usage_menu_metered">Mobiili hotspotit</string>
   <string name="miui_experience_optimization">Ota MIUI optimointi käyttöön</string>
+  <string name="miui_ime_xiaoai_voice_hint">Nopeampi ja mukavampi tapa syöttää tekstiä</string>
+  <string name="miui_ime_xiaoai_voice_title">Mi AI-äänisyöttö</string>
   <string name="miui_lab_ai_cloud_closed">AI-ennakkolataus ei ole vielä käytettävissä.</string>
   <string name="miui_lab_ai_preload_desc">AI-ennakkolataus nopeuttaa sovellusten käynnistämistä</string>
   <string name="miui_lab_ai_preload_title">AI-ennakkolataus</string>
@@ -3327,6 +3341,7 @@ Valitse käyttöjärjestelmäsi:"</string>
   <string name="other_relative">Muut</string>
   <string name="other_sound_category_preference_title">Muut äänet ja värinä</string>
   <string name="other_sound_settings">Muut äänet</string>
+  <string name="others">Muu</string>
   <string name="overlay_display_devices_title">Simuloi toissijaiset näytöt</string>
   <string name="overlay_settings">Sovellusten päällä näkyminen</string>
   <string name="owner_info_settings_edit_text_hint">Esim. Rikun android</string>
@@ -4963,7 +4978,7 @@ Se on Googlen tapa synkronoida tietoja, ja sen avulla voit käyttää yhteystiet
   <string name="system_alert_window_summary">%1$d/%2$d sovellusta saa näkyä muiden sovellusten päällä.</string>
   <string name="system_and_device_section_title">Järjestelmä ja laite</string>
   <string name="system_app">(Järjestelmä)</string>
-  <string name="system_app_settings">Järjestelmäsovellukset</string>
+  <string name="system_app_settings">Järjestelmäsovelluksien asetukset</string>
   <string name="system_apps_updater">Järjestelmäsovelluksien päivittäjä</string>
   <string name="system_backup_section_title">Varmuuskopiointi</string>
   <string name="system_dashboard_summary">Kielet, aika, varmuuskopiointi, päivitykset</string>
