--- a/Finnish/main/Updater.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Updater.apk/res/values-fi-rFI/strings.xml
@@ -22,6 +22,7 @@
   <string name="dialog_btn_wifi">Vaihda Wi-Fi-yhteyteen</string>
   <string name="dialog_stop_desc">Voit joko pysäyttää tai lopettaa latauksen, tee valintasi nyt.</string>
   <string name="dialog_stop_title">Lopetaanko lataus?</string>
+  <string name="dialog_twrp">Sisäinen tallennustilasi on salattu. Anna laitteesi lukituksenpoistosalasana, kun se on käynnistynyt uudelleen recovery-tilaan jatkaaksesi.</string>
   <string name="download_done">Ladattiin onnistuneesti!</string>
   <string name="download_fail">Virhe latauksen aikana!</string>
   <string name="download_fail_desc">MD5 tarkistenumero ei täsmää…</string>
