--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
@@ -106,6 +106,15 @@ ja optimoi valokuvasi näiden tietojen perusteella"</string>
   <string name="color_effect_entry_soda">Sooda</string>
   <string name="color_effect_entry_vivid">Eloisa</string>
   <string name="color_effect_entry_warm">Aurinko</string>
+  <string name="color_effect_live_blue">Orchid</string>
+  <string name="color_effect_live_contrast">Xpro</string>
+  <string name="color_effect_live_deepblack">M&amp;V</string>
+  <string name="color_effect_live_fair">Kalpea</string>
+  <string name="color_effect_live_hongkong">Bauhinia</string>
+  <string name="color_effect_live_mousse">Vaahto</string>
+  <string name="color_effect_live_none">Normaali</string>
+  <string name="color_effect_live_solar">Taivaan sininen</string>
+  <string name="color_effect_live_years">Seepia</string>
   <string name="config_name_group">Ryhmäselfie</string>
   <string name="config_name_hht">HHT</string>
   <string name="config_name_magic">Taika</string>
@@ -211,6 +220,18 @@ Muotokuvatilassa"</string>
   <string name="lighting_pattern_rainbow">Sateenkaari</string>
   <string name="lighting_pattern_shutter">Kaihtimet</string>
   <string name="lighting_pattern_stage">Näyttämö</string>
+  <string name="live_edit_exit_confirm">Poistu</string>
+  <string name="live_edit_exit_message">Hylätäänkö kaappaus?</string>
+  <string name="live_edit_share_title">Jaa</string>
+  <string name="live_speed_extreme_fast">Nopein</string>
+  <string name="live_speed_extreme_slow">Hitain</string>
+  <string name="live_speed_fast">Nopea</string>
+  <string name="live_speed_fragment_tab_name">Nopeus</string>
+  <string name="live_speed_normal">Normaali</string>
+  <string name="live_speed_slow">Hidas</string>
+  <string name="live_sticker_fragment_tab_name">Taika</string>
+  <string name="live_sticker_updating">Päivitetään...</string>
+  <string name="makeup_reset_toast">Poista meikkitehosteet</string>
   <string name="message_snap_double_confirm">Äänenvoimakkuuspainikkeen pitkä painallus käynnistää tällä hetkellä NFC:n. Korvataanko tämä ominaisuus?</string>
   <string name="module_name_beauty">Kauneus</string>
   <string name="module_name_capture">Kuva</string>
@@ -311,7 +332,7 @@ ja tuo henkilöt esiin."</string>
   <string name="pref_camera_delay_capture_entry_5s">5s viive</string>
   <string name="pref_camera_delay_capture_entry_audio">Ääni</string>
   <string name="pref_camera_delay_capture_title">Ajastin</string>
-  <string name="pref_camera_device_watermark_title">Kuvan vesileima</string>
+  <string name="pref_camera_device_watermark_title">Laitteen vesileima</string>
   <string name="pref_camera_dual_enable_title">Ota kaksoiskamera käyttöön</string>
   <string name="pref_camera_dual_sat_enable_title">Ota kaksois SAT kamera käyttöön</string>
   <string name="pref_camera_exposuretime_entry_auto">AUTO</string>
@@ -461,7 +482,6 @@ ja tuo henkilöt esiin."</string>
   <string name="pref_camera_zsl_entry_off">Pois päältä</string>
   <string name="pref_camera_zsl_entry_on">Päällä</string>
   <string name="pref_capture_settings">Kamera</string>
-  <string name="pref_dualcamera_watermark_title">Kaksoiskameran vesileima</string>
   <string name="pref_face_beauty_title">Kaunista</string>
   <string name="pref_fingerprint_capture_title">Sormenjäljellä kuvan ottaminen</string>
   <string name="pref_front_mirror_entry_auto">Kun kasvot tunnistetaan</string>
@@ -571,7 +591,7 @@ ja tuo henkilöt esiin."</string>
   <string name="user_agree">Hyväksy</string>
   <string name="user_agreement2">Palveluehdot</string>
   <string name="user_agreement4">Tietosuojakäytäntö</string>
-  <string name="user_notice_identify_summary_format">Käyttämällä tätä palvelua, hyväksyt Xiaomin %1$s ja %2$s.</string>
+  <string name="user_notice_identify_summary_format">Käyttämällä tätä palvelua, hyväksyt Xiaomin %1$s ja %2$s. Hyväksytkö internetiin yhdistämisen?</string>
   <string name="user_notice_title">Käyttöehdot</string>
   <string name="video_camera_label">Videokamera</string>
   <string name="video_effect_entry_blackwhite">M&amp;V</string>
