--- a/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
@@ -1751,6 +1751,8 @@ Asetus vaikuttaa tämän puhelimen kaikkiin käyttäjiin."</string>
   <string name="double_twist_for_camera_mode_title">Kameran vaihtaminen</string>
   <string name="download_current_rom">Hanki uusin MIUI versio</string>
   <string name="downloading_description">Ladataan…</string>
+  <string name="doze_always_on_summary">Näytä aika, ilmoituskuvakkeet ja muita tietoja. Nostaa akun käyttöä.</string>
+  a<string name="doze_always_on_title">Aina päällä</string>
   <string name="doze_summary">Aktivoi näyttö, kun saat ilmoituksia.</string>
   <string name="doze_title">Ambient-näyttö</string>
   <string name="draw_overlay">Sovellusten päällä näkyminen</string>
