--- a/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
@@ -3603,7 +3603,7 @@ Valitse käyttöjärjestelmäsi:"</string>
   <string name="privacy_authorize_cloud_msg">Varmistaaksesi tilisi turvallisuuden, kirjaudu sisään osoitteeseen i.mi.com, jos haluat peruuttaa Mi Pilvi -palveluiden valtuutuksen (mukaan lukien synkronoinnin ja varmuuskopiot).</string>
   <string name="privacy_authorize_dialog_agree">Hyväksyn</string>
   <string name="privacy_authorize_dialog_exit">Poistu</string>
-  <string name="privacy_authorize_dialog_message">&lt;Data&gt;"Käyttääksesi tämän palvelun perusominaisuuksia, sinun täytyy hyväksyä, että Xiaomi kerää, käsittelee ja käyttää henkilökohtaisia tietojasi. Tutustu Tietosuojakäytäntöömme lukeaksesi lisää siitä, miten keräämme ja käsittelemme henkilötietojasi. Valitsemalla \"Hyväksyn\" tarkoittaa, että olet lukenut ja hyväksyt meidän &amp;lt;a href=\"http://www.miui.com/res/doc/privacy.html?region=%1$s&amp;amp;lang=%2$s\"&amp;gt;Tietosuojakäytännön&amp;lt;/a&amp;gt; ja &amp;lt;a href=\"http://www.miui.com/res/doc/eula.html?region=%3$s&amp;amp;lang=%4$s\"&amp;gt;Käyttöehdot&amp;lt;/a&amp;gt;.&amp;#8203;"&lt;/Data&gt;</string>
+  <string name="privacy_authorize_dialog_message">Käyttääksesi tämän palvelun perusominaisuuksia, sinun täytyy hyväksyä, että Xiaomi kerää, käsittelee ja käyttää henkilökohtaisia tietojasi. Tutustu Tietosuojakäytäntöömme lukeaksesi lisää siitä, miten keräämme ja käsittelemme henkilötietojasi. Valitsemalla \"Hyväksyn\" tarkoittaa, että olet lukenut ja hyväksyt meidän Tietosuojakäytännön ja Käyttöehdot.</string>
   <string name="privacy_authorize_network_error">Yhdistä verkkoon ja yritä uudelleen.</string>
   <string name="privacy_authorize_privacy_policy">Tietosuojakäytäntö</string>
   <string name="privacy_authorize_revoke">Peruuta</string>
